endpoints: retrieve user via username
